--- a/index.html
+++ b/index.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
 <html lang='en'>
   <head>
+    <title>Allan</title>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
   </head>
   <body>
+    <h1>Hello, Code School!</h1>
 
-    Hello, my name is Allan.
+    <ul>
+      <li>HTML/CSS</li>
+      <li>Javascript</li>
+      <li>Python</li>
+      <li>Ruby</li>
+      <li>NodeJS</li>
+      <li>PHP</li>
+      <li>Build a search engine</li>
+      <li>Build a website</li>
+    </ul>
 
   </body>
 </html>
